--- a/Output/Raw files/Balance tests/attrition_table.tex
+++ b/Output/Raw files/Balance tests/attrition_table.tex
@@ -8,10 +8,10 @@
 \qquad Share of months household reports there was conflict & \begin{tabular}[t]{@{}c@{}} 101 \\ {[}101] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.212 \\ (0.027) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9 \\ {[}9] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.200 \\ (0.120) \end{tabular} &     0.012 \rule{0pt}{3ex}\\
 \qquad Share of months household reports there was enough water & \begin{tabular}[t]{@{}c@{}} 101 \\ {[}101] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.705 \\ (0.026) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9 \\ {[}9] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.644 \\ (0.124) \end{tabular} &     0.061 \rule{0pt}{3ex}\\
 \qquad Average yield per hectare (thousands of Meticais) & \begin{tabular}[t]{@{}c@{}} 95 \\ {[}95] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 140.149 \\ (12.666) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 128.731 \\ (27.636) \end{tabular} &    11.417 \rule{0pt}{3ex}\\
-\multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\ \hline \\[-1.8ex] \multicolumn{1}{l}{\textit{ Household-plot-crop-growth stage observations}} &&&& \\ \\[-1.8ex] \qquad Total water availability (log mm/day) & \begin{tabular}[t]{@{}c@{}} 526 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 1.851 \\ (0.059) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 1.726 \\ (0.168) \end{tabular} &     0.125 \rule{0pt}{3ex}\\
-\qquad Water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 522 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.634 \\ (0.061) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.421 \\ (0.167) \end{tabular} &     0.213 \rule{0pt}{3ex}\\
-\qquad Share of observations with negative water gap & \begin{tabular}[t]{@{}c@{}} 522 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.186 \\ (0.023) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.259 \\ (0.075) \end{tabular} &    -0.073 \rule{0pt}{3ex}\\
-\qquad Absolute water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 522 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.735 \\ (0.054) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.637 \\ (0.118) \end{tabular} &     0.098 \rule{0pt}{3ex}\\ \multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\
+\multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\ \hline \\[-1.8ex] \multicolumn{1}{l}{\textit{ Household-plot-crop-growth stage observations}} &&&& \\ \\[-1.8ex] \qquad Total water availability (log mm/day) & \begin{tabular}[t]{@{}c@{}} 648 \\ {[}101] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9.701 \\ (0.063) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 72 \\ {[}9] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9.538 \\ (0.278) \end{tabular} &     0.163 \rule{0pt}{3ex}\\
+\qquad Water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 548 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.578 \\ (0.068) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 64 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.330 \\ (0.291) \end{tabular} &     0.248 \rule{0pt}{3ex}\\
+\qquad Share of observations with negative water gap & \begin{tabular}[t]{@{}c@{}} 548 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.000 \\ (0.000) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 64 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.000 \\ (0.000) \end{tabular} & N/A \rule{0pt}{3ex}\\
+\qquad Absolute water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 548 \\ {[}93] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.578 \\ (0.068) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 64 \\ {[}8] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.330 \\ (0.291) \end{tabular} &     0.248 \rule{0pt}{3ex}\\
 \hline \hline \\[-1.8ex]
 %%% This is the note. If it does not have the correct margins, edit text below to fit to table size.
 \multicolumn{6}{@{}p{1.4\textwidth}}
