--- a/Output/Raw files/Balance tests/balance_table.tex
+++ b/Output/Raw files/Balance tests/balance_table.tex
@@ -8,11 +8,11 @@
 \qquad Share of months household reports there was conflict & \begin{tabular}[t]{@{}c@{}} 56 \\ {[}56] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.229 \\ (0.037) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}54] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.193 \\ (0.037) \end{tabular} &     0.036 \rule{0pt}{3ex}\\
 \qquad Share of months household reports there was enough water & \begin{tabular}[t]{@{}c@{}} 56 \\ {[}56] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.742 \\ (0.033) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 54 \\ {[}54] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.657 \\ (0.040) \end{tabular} &     0.085* \rule{0pt}{3ex}\\
 \qquad Average yield per hectare (thousands of Meticais) & \begin{tabular}[t]{@{}c@{}} 53 \\ {[}53] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 154.043 \\ (19.147) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 50 \\ {[}50] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 123.594 \\ (13.432) \end{tabular} &    30.449 \rule{0pt}{3ex}\\
-\multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\ \hline \\[-1.8ex] \multicolumn{1}{l}{\textit{ Household-plot-crop-growth stage observations}} &&&& \\ \\[-1.8ex] \qquad Total water availability (log mm/day) & \begin{tabular}[t]{@{}c@{}} 282 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 1.808 \\ (0.061) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 298 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 1.869 \\ (0.093) \end{tabular} &    -0.061 \rule{0pt}{3ex}\\
-\qquad Mean precipitation in that GS (log mm/day) & \begin{tabular}[t]{@{}c@{}} 282 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.846 \\ (0.049) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 298 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.855 \\ (0.059) \end{tabular} &    -0.009 \rule{0pt}{3ex}\\
-\qquad Water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 278 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.602 \\ (0.061) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 298 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.625 \\ (0.098) \end{tabular} &    -0.023 \rule{0pt}{3ex}\\
-\qquad Share of observations with negative water gap & \begin{tabular}[t]{@{}c@{}} 278 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.183 \\ (0.030) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 298 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.201 \\ (0.033) \end{tabular} &    -0.018 \rule{0pt}{3ex}\\
-\qquad Absolute water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 278 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.715 \\ (0.048) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 298 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.736 \\ (0.087) \end{tabular} &    -0.021 \rule{0pt}{3ex}\\ \multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\
+\multicolumn{1}{l}{F-test of joint significance (F-stat)} &&&&& \\ \hline \\[-1.8ex] \multicolumn{1}{l}{\textit{ Household-plot-crop-growth stage observations}} &&&& \\ \\[-1.8ex] \qquad Total water availability (log mm/day) & \begin{tabular}[t]{@{}c@{}} 364 \\ {[}56] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9.598 \\ (0.086) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 356 \\ {[}54] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 9.773 \\ (0.087) \end{tabular} &    -0.175 \rule{0pt}{3ex}\\
+\qquad Mean precipitation in that GS (log mm/day) & \begin{tabular}[t]{@{}c@{}} 364 \\ {[}56] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.815 \\ (0.092) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 356 \\ {[}54] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.964 \\ (0.121) \end{tabular} &    -0.149 \rule{0pt}{3ex}\\
+\qquad Water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 292 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.510 \\ (0.089) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 320 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.591 \\ (0.096) \end{tabular} &    -0.080 \rule{0pt}{3ex}\\
+\qquad Share of observations with negative water gap & \begin{tabular}[t]{@{}c@{}} 292 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.000 \\ (0.000) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 320 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 0.000 \\ (0.000) \end{tabular} & N/A \rule{0pt}{3ex}\\
+\qquad Absolute water gap (log mm/day) & \begin{tabular}[t]{@{}c@{}} 292 \\ {[}52] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.510 \\ (0.089) \end{tabular} & \begin{tabular}[t]{@{}c@{}} 320 \\ {[}49] \end{tabular} & \begin{tabular}[t]{@{}c@{}} 8.591 \\ (0.096) \end{tabular} &    -0.080 \rule{0pt}{3ex}\\
 \hline \hline \\[-1.8ex]
 %%% This is the note. If it does not have the correct margins, edit text below to fit to table size.
 \multicolumn{6}{@{}p{1.55\textwidth}}
