--- a/Output/Raw files/Regression results/water_gap_neg.tex
+++ b/Output/Raw files/Regression results/water_gap_neg.tex
@@ -4,29 +4,29 @@
 \hline\hline
                     &\multicolumn{1}{c}{(1)}         &\multicolumn{1}{c}{(2)}         \\
 \hline
-Post                &      -0.140\sym{***}&      -0.198\sym{***}\\
-                    &     (0.023)         &     (0.028)         \\
+Post                &           0         &           0         \\
+                    &         (.)         &         (.)         \\
 [1em]
-Individual feedback &     -0.0216         &     -0.0369         \\
-                    &     (0.022)         &     (0.028)         \\
+Individual feedback &           0         &           0         \\
+                    &         (.)         &         (.)         \\
 [1em]
-Individual feedback * Post&     0.00818         &      0.0177         \\
-                    &     (0.034)         &     (0.043)         \\
+Individual feedback * Post&           0         &           0         \\
+                    &         (.)         &         (.)         \\
 [1em]
-High water gap      &                     &      -0.155\sym{***}\\
-                    &                     &     (0.038)         \\
+High water gap      &                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Post * High water gap&                     &       0.136\sym{***}\\
-                    &                     &     (0.043)         \\
+Post * High water gap&                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Individual feedback * High water gap&                     &      0.0455         \\
-                    &                     &     (0.049)         \\
+Individual feedback * High water gap&                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Individual feedback * Post * High water gap&                     &     -0.0344         \\
-                    &                     &     (0.066)         \\
+Individual feedback * Post * High water gap&                     &           0         \\
+                    &                     &         (.)         \\
 \hline
-Observations        &        3724         &        3709         \\
-Adjusted \(R^{2}\)  &       0.201         &       0.208         \\
+Observations        &        3848         &        3832         \\
+Adjusted \(R^{2}\)  &           .         &           .         \\
 Randomization pairs fixed-effects&         Yes         &         Yes         \\
 Month of planting fixed-effects&         Yes         &         Yes         \\
 \hline\hline
