--- a/Output/Raw files/Regression results/ln_yield_mtzha_med.tex
+++ b/Output/Raw files/Regression results/ln_yield_mtzha_med.tex
@@ -4,29 +4,29 @@
 \hline\hline
                     &\multicolumn{1}{c}{(1)}         &\multicolumn{1}{c}{(2)}         \\
 \hline
-Individual feedback &      0.0208         &    -0.00756         \\
-                    &     (0.124)         &     (0.187)         \\
+Individual feedback &      0.0208         &      0.0257         \\
+                    &     (0.124)         &     (0.123)         \\
 [1em]
-Post                &       0.422         &       0.690         \\
-                    &     (0.391)         &     (0.462)         \\
+Post                &       0.422         &       0.485         \\
+                    &     (0.391)         &     (0.412)         \\
 [1em]
-Individual feedback * Post&      -0.134         &      -0.333         \\
-                    &     (0.198)         &     (0.289)         \\
+Individual feedback * Post&      -0.134         &      -0.121         \\
+                    &     (0.198)         &     (0.201)         \\
 [1em]
-Average pre-feedback water gap is negative&                     &     -0.0892         \\
-                    &                     &     (0.218)         \\
+Average pre-feedback water gap is negative&                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Individual feedback * Average pre-feedback water gap is negative&                     &      0.0693         \\
-                    &                     &     (0.239)         \\
+Individual feedback * Average pre-feedback water gap is negative&                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Post * Average pre-feedback water gap is negative&                     &      -0.548\sym{**} \\
-                    &                     &     (0.266)         \\
+Post * Average pre-feedback water gap is negative&                     &           0         \\
+                    &                     &         (.)         \\
 [1em]
-Individual feedback * Post * Average pre-feedback water gap is negative&                     &       0.496         \\
-                    &                     &     (0.354)         \\
+Individual feedback * Post * Average pre-feedback water gap is negative&                     &           0         \\
+                    &                     &         (.)         \\
 \hline
 Observations        &         660         &         617         \\
-Adjusted \(R^{2}\)  &       0.058         &       0.074         \\
+Adjusted \(R^{2}\)  &       0.058         &       0.069         \\
 Randomization pairs fixed-effects&         Yes         &         Yes         \\
 Round fixed-effects &         Yes         &         Yes         \\
 \hline\hline
